[Docs] Fix head content spacing between description title (#3339)

--- a/docs/styles/_indexpage.scss
+++ b/docs/styles/_indexpage.scss
@@ -118,6 +118,7 @@
         }
         .head-content {
           margin-left: 185px;
+          margin-top: 25px;
         }
 
         @media only screen and (max-width: 767px) {
